--- a/drupal/sites/all/themes/checkdesk/assets/css/style.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style.css
@@ -4777,7 +4777,8 @@ span.content-labels:after {
 .source .source-metadata-item {
   display: block;
   padding: 4px 8px;
-  margin: 0 4px;
+  margin-right: 4px;
+  margin-bottom: 6px;
   color: #6f7a82;
   border: 1px solid rgba(16, 33, 47, 0.1);
   border-radius: 4px;
@@ -6515,7 +6516,7 @@ body.cke_editable blockquote:after {
   text-align: left;
 }
 
-.cd-container-inner .cd-container-header-title {
+.cd-container-inline .cd-container-header-title {
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #3e4c57;
   font-size: 20px;
