--- a/drupal/sites/all/themes/checkdesk/assets/scss/module/container/_container.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/scss/module/container/_container.scss
@@ -40,7 +40,7 @@
 // align title to normal for containers that are inline
 // for example on report or source pages to show references
 // plus different format
-.cd-container-inner {
+.cd-container-inline {
   .cd-container-header-title {
     font-family: $sans-serif-font-stack;
     color: $firefly80;
